# app/Http/Controllers/API/v1/StationController.php
@@ -96,7 +96,7 @@ class StationController extends Controller
                                             'longitude'     => ['nullable', 'numeric', 'between:-180,180'],
                                             'time_offset'   => ['nullable', 'numeric'],
                                         ]);
-        
+
         if (array_key_exists('time_offset', $request->json()->all()) && $request->json('time_offset') === null) {
             $validated['time_offset'] = null;
         }
@@ -145,4 +145,38 @@ class StationController extends Controller
         return $this->sendResponse($stations);
     }
 
+
+    /**
+     * @OA\Get(
+     *      path="/station/{id}",
+     *      operationId="showStation",
+     *      tags={"Checkin"},
+     *      summary="Show station",
+     *      description="This request returns a single station object",
+     * @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="station id",
+     *          example="1337"
+     *     ),
+     * @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="data", type="object", ref="#/components/schemas/StationResource")
+     *          )
+     *       ),
+     * @OA\Response(response=401, description="Unauthorized"),
+     * @OA\Response(response=503, description="There has been an error with our data provider"),
+     *       security={
+     *          {"passport": {"create-statuses"}}, {"token": {}}
+     *
+     *       }
+     *     )
+     */
+    public function show(int $id): JsonResponse {
+        $station = Station::findOrFail($id);
+
+        return $this->sendResponse(new StationResource($station));
+    }
 }
